--- a/app/src/main/res/layout/tool_bar.xml
+++ b/app/src/main/res/layout/tool_bar.xml
@@ -33,10 +33,9 @@
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
                 android:singleLine="true"
-                android:gravity="center"
                 android:drawableLeft="@drawable/ic_location_pin"
                 android:drawablePadding="@dimen/_5sdp"
-                android:text="5th cross road, Khaleem KF…"
+                android:text="Current Location"
                 android:textAllCaps="false"
                 android:textAppearance="@style/MediumText"
                 android:textColor="@color/semi_color"
